# gfk

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  WindowsInstallationSteps.txt  gfkbuild.sublime-build
android/: AndroidJNINotes.txt  AndroidManifest.xml  build.xml  installDebug.sh  local.properties  project.properties
android/jni/: Android.mk  AndroidGame.cpp  AndroidGame.hpp  Application.mk  GFKAndroidWrapper.cpp  app-android.c  gfk_app.cpp
android/res/values/: strings.xml
android/src/com/android/gfk/: GFKActivity.java  GFKLib.java  GFKView.java
android/src/com/gfk/: GFKApp.java
cmake/Modules/: FindAssimp.cmake  FindGLEW.cmake  FindGLEW_STATIC.cmake  FindGLFW.cmake  FindLibuv.cmake  FindOVR.cmake  FindUUID.cmake
include/GFK/: ConsoleGame.hpp  Game.hpp  Game.hpp~  GameTime.hpp  GameTime.hpp~  MathHelper.hpp  OSDetection.hpp  Vector2.hpp
include/GFK/Components/: GameObject.hpp
include/GFK/Graphics/: AssImpBridge.hpp  Camera.hpp  Camera2D.hpp  Color.hpp  GLHeader.hpp  GraphicsDevice.hpp  GraphicsDevice.hpp~  Mesh.hpp  MonitorConfig.hpp  PackedColor.hpp  PrimitiveBatch.hpp  PrimitiveBatch2D.hpp  PrimitiveBatch3D.hpp  PrimitiveType.hpp  RenderTarget2D.hpp  Shader.hpp
include/GFK/Input/: GamePad.hpp  GestureRecognizer.hpp  Keyboard.hpp  Keys.hpp  Mouse.hpp  TouchEvent.hpp
include/GFK/Math/: EasingFunctions.hpp  GUIDGenerator.hpp  MathHelper.hpp  Matrix.hpp  Quaternion.hpp  Transform.hpp  Vector2.hpp  Vector3.hpp
include/GFK/Network/: BytePacker.hpp  IPAddress.hpp  NetDiscoveryClient.hpp  NetDiscoveryServer.hpp  NetworkBuffer.hpp  PortMapper.hpp  PortMapping.hpp  SocketHeader.hpp  UDPServer.hpp  UDPSocket.hpp
include/GFK/System/: GameTime.hpp  Logger.hpp
include/GFK/VR/: VRCamera.hpp
lib/assimp/: CMakeLists.txt
lib/assimp/contrib/zlib/: CMakeLists.txt
lib/assimp/osx/: AssimpBuildNotes.txt
lib/enet/: CMakeLists.txt
lib/glew/: CMakeLists.txt  glewmx.pc
lib/glfw/: CMakeLists.txt
lib/glfw/windows/: glfw3.lib
lib/libnatpmp/: CMakeLists.txt  getgateway.c  getgateway.h  natpmp.h
lib/net_adapter/: CMakeLists.txt
lib/net_adapter/src/: NetAdapter_Unix.cpp
licenses/: EasingTermsOfUse.html
src/GFK/: ConsoleGame.cpp  Game.cpp  GameTime.cpp  MathHelper.cpp  Vector2.cpp
src/GFK/Components/: GameObject.cpp
src/GFK/Graphics/: AssImpBridge.cpp  Camera.cpp  Camera2D.cpp  Color.cpp  GLErrorHandling.cpp  GraphicsDevice.cpp  Mesh.cpp  MonitorConfig.cpp  PackedColor.cpp  PrimitiveBatch.cpp  PrimitiveBatch2D.cpp  PrimitiveBatch3D.cpp  RenderTarget2D.cpp  Shader.cpp
src/GFK/Input/: GamePad.cpp  GestureRecognizer.cpp  Keyboard.cpp  Mouse.cpp  TouchEvent.cpp
src/GFK/Math/: EasingFunctions.cpp  GUIDGenerator.cpp  MathHelper.cpp  Matrix.cpp  Quaternion.cpp  Transform.cpp  Vector2.cpp  Vector3.cpp
src/GFK/Network/: BytePacker.cpp  IPAddress.cpp  NetDiscoveryClient.cpp  NetDiscoveryServer.cpp  NetworkBuffer.cpp  PortMapper.cpp  PortMapping.cpp  UDPServer.cpp  UDPSocket.cpp
src/GFK/System/: GameTime.cpp  Logger.cpp
src/GFK/VR/: VRCamera.cpp
test/: CMakeLists.txt  CMakeLists.txt~  main.cpp  main.cpp~
test/general/: BasicWindowTest.cpp  CMakeLists.txt  DataTypeSizes.cpp  EasingTest.cpp  GUIDTest.cpp
test/general/basic-window/: CMakeLists.txt
test/general/easing/: CMakeLists.txt  EasingTest.cpp
test/general/guid/: CMakeLists.txt  GUIDTest.cpp
test/graphics/: CMakeLists.txt  Graphics2DTest.cpp
test/jet/: CMakeLists.txt  JetGame.cpp  Main.cpp  Packets.cpp
test/jet/android/: .gitignore  AndroidManifest.xml  build.xml
test/jet/android/jni/: Android.mk  AndroidJetGame.cpp  AndroidJetGame.hpp  Application.mk  GFKAndroidWrapper.cpp  TopDownCamera.cpp  TopDownCamera.hpp  main.cpp
test/jet/android/jni/lib/android_ifaddrs/: Android.mk
test/jet/android/jni/lib/assimp/: Android.mk
test/jet/android/jni/lib/enet/: Android.mk
test/jet/android/jni/lib/gfk/: Android.mk
test/jet/android/jni/lib/natpmp/: Android.mk
test/jet/android/jni/lib/net_adapter/: Android.mk
test/jet/android/src/com/android/gfk/: GFKActivity.java  GFKLib.java  JetApplication.java
test/jet/assets/: Airplane F18 N120712.3DS
test/jet/common/: JetCamera.cpp  TopDownCamera.cpp
test/jet/common/include/: JetGame.hpp  TopDownCamera.hpp
test/jet/common/include/network/: ClientType.hpp  JetClient.hpp  Outbox.hpp  Packet.hpp
test/jet/common/include/objects/: ClientData.hpp  Helicopter.hpp  Vehicle.hpp
test/jet/common/network/: JetClient.cpp  Outbox.cpp
test/jet/common/network/protocol/: ClassHeaderTemplate.txt  ClassImplementationTemplate.txt  ExampleProtocol.json
test/jet/common/objects/: ClientData.cpp  GameInput.cpp  Helicopter.cpp  Jet.cpp  Vehicle.cpp
test/jet/desktop/: CMakeLists.txt  JetGame.cpp  Main.cpp
test/jet/desktop/assets/: f18hornet.blend  jet.3ds
test/jet/include/: JetCamera.hpp  JetGame.hpp  Packets.hpp
test/jet/include/network/: ClientType.hpp  JetClient.hpp  NetworkHelper.hpp  Outbox.hpp  Packet.hpp  PacketHandler.hpp  RemoteConnection.hpp
test/jet/include/objects/: ClientData.hpp  GameInput.hpp  Jet.hpp
test/jet/network/: JetClient.cpp  NetworkHelper.cpp  Outbox.cpp  Packet.cpp  RemoteConnection.cpp
test/jet/network/protocol/: ExampleProtocol.json  GenerateProtocol.js  HeaderTemplate.txt  SourceTemplate.txt
test/jet/objects/: ClientData.cpp  GameInput.cpp  Jet.cpp
test/jet/server/: CMakeLists.txt  JetServer.cpp  JetServer.hpp
test/network/: BytePackerTest.cpp  CMakeLists.txt  ClientTest.cpp  NetDiscoveryClientTest.cpp  NetworkBufferTest.cpp  PortMapperTest.cpp  ServerTest.cpp
test/network/client/: CMakeLists.txt  ClientTest.cpp  main.cpp
test/network/server/: CMakeLists.txt  ServerTest.cpp  UDPServerTest.cpp  main.cpp
